打开aotf文件时，同时加载dll和ini。